--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,9 @@
               <a href="./index.html" class="header-link link"> Studio</a>
             </li>
             <li class="header-item">
-              <a href="portfolio.html" class="header-link link"> Portfolio</a>
+              <a href="portfolio.html" class="header-link link current">
+                Portfolio</a
+              >
             </li>
             <li class="header-item">
               <a href="#" class="header-link link"> Contacts</a>
@@ -82,11 +84,20 @@
           <ul class="examples-list">
             <li class="examples-list-item">
               <a href="#" class="examples-list-link">
-                <img
-                  src="images/portfolio/banking-app.jpg"
-                  alt="banking-app interface Concept"
-                  width="360px"
-                />
+                <div class="thumb">
+                  <img
+                    src="images/portfolio/banking-app.jpg"
+                    alt="banking-app interface Concept"
+                    width="360px"
+                  />
+                  <div class="overlay">
+                    <p class="thumb-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="examples-item-container">
                   <h2 class="examples-item-title">
                     Banking App Interface Concept
@@ -97,12 +108,21 @@
             </li>
 
             <li class="examples-list-item">
-              <a href="#" class="examples-list-link"
-                ><img
-                  src="images/portfolio/cashless.jpg"
-                  alt="man pays with phone"
-                  width="360px"
-                />
+              <a href="#" class="examples-list-link">
+                <div class="thumb">
+                  <img
+                    src="images/portfolio/cashless.jpg"
+                    alt="man pays with phone"
+                    width="360px"
+                  />
+                  <div class="overlay">
+                    <p class="thumb-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="examples-item-container">
                   <h2 class="examples-item-title">Cashless Payments</h2>
                   <p class="examples-item-paragraph">Marketing</p>
@@ -110,12 +130,21 @@
               >
             </li>
             <li class="examples-list-item">
-              <a href="#" class="examples-list-link"
-                ><img
-                  src="images/portfolio/meditation.jpg"
-                  alt="laptop and phone staying near each other"
-                  width="360px"
-                />
+              <a href="#" class="examples-list-link">
+                <div class="thumb">
+                  <img
+                    src="images/portfolio/meditation.jpg"
+                    alt="laptop and phone staying near each other"
+                    width="360px"
+                  />
+                  <div class="overlay">
+                    <p class="thumb-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="examples-item-container">
                   <h2 class="examples-item-title">Meditaion App</h2>
                   <p class="examples-item-paragraph">app</p>
@@ -123,12 +152,21 @@
               >
             </li>
             <li class="examples-list-item">
-              <a href="#" class="examples-list-link"
-                ><img
-                  src="images/portfolio/taxi.jpg"
-                  alt="taxi driver holding steering wheel"
-                  width="360px"
-                />
+              <a href="#" class="examples-list-link">
+                <div class="thumb">
+                  <img
+                    src="images/portfolio/taxi.jpg"
+                    alt="taxi driver holding steering wheel"
+                    width="360px"
+                  />
+                  <div class="overlay">
+                    <p class="thumb-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="examples-item-container">
                   <h2 class="examples-item-title">Taxi Service</h2>
                   <p class="examples-item-paragraph">Marketing</p>
@@ -136,12 +174,21 @@
               >
             </li>
             <li class="examples-list-item">
-              <a href="#" class="examples-list-link"
-                ><img
-                  src="images/portfolio/phone.jpg"
-                  alt="phone with beutiful background"
-                  width="360px"
-                />
+              <a href="#" class="examples-list-link">
+                <div class="thumb">
+                  <img
+                    src="images/portfolio/phone.jpg"
+                    alt="phone with beutiful background"
+                    width="360px"
+                  />
+                  <div class="overlay">
+                    <p class="thumb-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="examples-item-container">
                   <h2 class="examples-item-title">Screen Illustrations</h2>
                   <p class="examples-item-paragraph">Design</p>
@@ -149,12 +196,21 @@
               >
             </li>
             <li class="examples-list-item">
-              <a href="#" class="examples-list-link"
-                ><img
-                  src="images/portfolio/woman.jpg"
-                  alt="smiling girl holding phone "
-                  width="360px"
-                />
+              <a href="#" class="examples-list-link">
+                <div class="thumb">
+                  <img
+                    src="images/portfolio/woman.jpg"
+                    alt="smiling girl holding phone "
+                    width="360px"
+                  />
+                  <div class="overlay">
+                    <p class="thumb-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage Apps
+                    </p>
+                  </div>
+                </div>
                 <div class="examples-item-container">
                   <h2 class="examples-item-title">Online Courses</h2>
                   <p class="examples-item-paragraph">Marketing</p>
@@ -162,12 +218,21 @@
               </a>
             </li>
             <li class="examples-list-item">
-              <a href="#" class="examples-list-link"
-                ><img
-                  src="images/portfolio/stories.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360px"
-                />
+              <a href="#" class="examples-list-link">
+                <div class="thumb">
+                  <img
+                    src="images/portfolio/stories.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360px"
+                  />
+                  <div class="overlay">
+                    <p class="thumb-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="examples-item-container">
                   <h2 class="examples-item-title">Instagram Stories Concept</h2>
                   <p class="examples-item-paragraph">Design</p>
@@ -175,12 +240,21 @@
               >
             </li>
             <li class="examples-list-item">
-              <a href="#" class="examples-list-link"
-                ><img
-                  src="images/portfolio/food.jpg"
-                  alt="woman holding package of food"
-                  width="360px"
-                />
+              <a href="#" class="examples-list-link">
+                <div class="thumb">
+                  <img
+                    src="images/portfolio/food.jpg"
+                    alt="woman holding package of food"
+                    width="360px"
+                  />
+                  <div class="overlay">
+                    <p class="thumb-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="examples-item-container">
                   <h2 class="examples-item-title">Organic Food</h2>
                   <p class="examples-item-paragraph">Web Site</p>
@@ -188,12 +262,21 @@
               >
             </li>
             <li class="examples-list-item">
-              <a href="#" class="examples-list-link"
-                ><img
-                  src="images/portfolio/cofee.jpg"
-                  alt="barista making cofee"
-                  width="360px"
-                />
+              <a href="#" class="examples-list-link">
+                <div class="thumb">
+                  <img
+                    src="images/portfolio/cofee.jpg"
+                    alt="barista making cofee"
+                    width="360px"
+                  />
+                  <div class="overlay">
+                    <p class="thumb-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="examples-item-container">
                   <h2 class="examples-item-title">Fresh Coffee</h2>
                   <p class="examples-item-paragraph">Web Site</p>
