--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
           >
           <ul class="header-list">
             <li class="header-item">
-              <a href="./index.html" class="header-link link "> Studio</a>
+              <a href="./index.html " class="header-link link current">
+                Studio</a
+              >
             </li>
             <li class="header-item">
               <a href="portfolio.html" class="header-link link"> Portfolio</a>
@@ -62,7 +64,9 @@
       <section class="hero-section">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="hero-button">Order Service</button>
+          <button type="button" class="hero-button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
       <section class="feautures section">
@@ -568,5 +572,16 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-btn" data-modal-close>
+          <svg class="modal-btn-svg" width="8" height="8">
+            <use href="./images/symbol-defs.svg#close-icon"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
