--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -572,7 +576,10 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <div
+      class="backdrop is-hidden animate__animated animate__fadeInDown"
+      data-modal
+    >
       <div class="modal">
         <button class="modal-btn" data-modal-close>
           <svg class="modal-btn-svg" width="8" height="8">
