--- a/index.html
+++ b/index.html
@@ -576,10 +576,7 @@
         </div>
       </div>
     </footer>
-    <div
-      class="backdrop is-hidden animate__animated animate__fadeInDown"
-      data-modal
-    >
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn" data-modal-close>
           <svg class="modal-btn-svg" width="8" height="8">
