--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Portdolio</title>
+    <title>Portfolio</title>
     <link rel="shortcut icon " href="./images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -359,6 +359,30 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="footer-form-container">
+          <form class="subscription-form">
+            <label
+              for="subscription_user_email"
+              class="subscription-form__label"
+              >Subscripition
+            </label>
+            <div class="subscription-form__flex-container">
+              <input
+                type="email"
+                class="subscripition-form__input"
+                id="subscription_user_email"
+                name="subscription_user_email"
+                placeholder="E-mail"
+              />
+              <button type="submit" class="subscripition-form__button btn">
+                Subscribe
+                <svg class="" width="23" height="23">
+                  <use href=""></use>
+                </svg>
+              </button>
+            </div>
+          </form>
         </div>
       </div>
     </footer>
