--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <section class="hero-section">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="hero-button" data-modal-open>
+          <button type="button" class="hero-button btn" data-modal-open>
             Order Service
           </button>
         </div>
